# nexus-trading-indicator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  commitlint.config.js  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.husky/: pre-commit
backtest/: requirements.txt  run.py
backtest/engine/: __init__.py  data.py  indicators.py  metrics.py  strategy.py
backtest/tests/: conftest.py  test_indicators.py  test_strategy.py
bot/: config.py  consumer.py  dashboard.py  executor.py  journal.py  requirements.txt  risk_engine.py  scoring.py
bot/templates/: dashboard.html
bot/tests/: test_bot.py
mcp/: requirements.txt  server.py
mcp/tests/: test_tools.py
scripts/: validate-pine.sh
src/: nexus-indicator.pine  nexus-strategy.pine
