[project]
name = "nexus-trading-indicator"
version = "1.0.0"
description = "SMC trading system - indicator, backtester, MCP server, trading bot"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Nabil Mediouni"}]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["backtest/tests", "mcp/tests", "bot/tests"]
